fix: cell shift in month track view

--- a/style/styles.css
+++ b/style/styles.css
@@ -23,14 +23,10 @@
 }
 
 .theme-dark .contribution-graph .main.shadow {
-	box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
-			100%, 0.075),
-		/* shadow ring 👇 */
-		0 0 0 1px hsla(0, 0%, 0%, 0.05),
-		/* multiple soft shadows 👇 */
-		0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
-		0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
-		0 3.5px 6px hsla(0, 0%, 0%, 0.09);
+	box-shadow: inset 0 0 0.5px 1px hsla(0, 0%, 100%, 0.075),
+		/* shadow ring 👇 */ 0 0 0 1px hsla(0, 0%, 0%, 0.05),
+		/* multiple soft shadows 👇 */ 0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
+		0 0.9px 1.5px hsla(0, 0%, 0%, 0.045), 0 3.5px 6px hsla(0, 0%, 0%, 0.09);
 }
 
 .contribution-graph .main.fill-the-screen {
@@ -130,7 +126,7 @@
 	width: auto;
 	border-radius: 2px;
 	margin-right: 2px;
-	flex-grow: 1;
+	flex: 1;
 }
 
 .contribution-graph .main .charts.month-track .row {
@@ -231,7 +227,11 @@
 	justify-content: center;
 }
 
-.contribution-graph .calendar .month-container .week-indicator-container .cell.week-indicator {
+.contribution-graph
+	.calendar
+	.month-container
+	.week-indicator-container
+	.cell.week-indicator {
 	font-size: 0.6rem;
 	line-height: 1.5;
 	text-align: center;
@@ -437,7 +437,10 @@
 	gap: 8px;
 }
 
-.contribution-graph-modal-form .form-item .form-vertical-content>input[type="text"] {
+.contribution-graph-modal-form
+	.form-item
+	.form-vertical-content
+	> input[type="text"] {
 	flex-grow: 1;
 	border-width: 0px 0px 1px 0px;
 	padding: 3px;
@@ -873,20 +876,34 @@
 	color: var(--text-muted);
 }
 
-.contribution-graph .activity-container .activity-content .activity-list .activity-item {
+.contribution-graph
+	.activity-container
+	.activity-content
+	.activity-list
+	.activity-item {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 }
 
-.contribution-graph .activity-container .activity-content .activity-list .activity-item .label {
+.contribution-graph
+	.activity-container
+	.activity-content
+	.activity-list
+	.activity-item
+	.label {
 	color: var(--text-muted);
 	padding: 0.4rem 0.6rem;
 	white-space: wrap;
 	word-break: break-all;
 }
 
-.contribution-graph .activity-container .activity-content .activity-list .activity-item .label:hover {
+.contribution-graph
+	.activity-container
+	.activity-content
+	.activity-list
+	.activity-item
+	.label:hover {
 	background-color: var(--background-modifier-hover);
 }
 
@@ -898,13 +915,21 @@
 	width: 100%;
 }
 
-.contribution-graph .activity-container .activity-content .activity-navigation a {
+.contribution-graph
+	.activity-container
+	.activity-content
+	.activity-navigation
+	a {
 	color: var(--text-muted);
 	text-decoration: none;
 	padding: 0.4rem 0.6rem;
 }
 
-.contribution-graph .activity-container .activity-content .activity-navigation a:hover {
+.contribution-graph
+	.activity-container
+	.activity-content
+	.activity-navigation
+	a:hover {
 	background-color: var(--background-modifier-hover);
 }
 
